--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"type": "project",
 	"require": {
 		"laravel/framework": "5.0.*",
-	  	"dvlpp/sharp": "2.0.*",
+		"dvlpp/sharp": "dev-master",
 		"illuminate/html": "~5.0",
 		"doctrine/dbal": "~2.3",
 		"fzaninotto/faker": "1.3.*@dev"
