--- a/composer.json
+++ b/composer.json
@@ -1,48 +1,54 @@
 {
-	"name": "oimken/sharpzoo",
-	"description": "Sharp test app.",
-	"keywords": ["sharp"],
-	"type": "project",
-	"require": {
-		"laravel/framework": "5.0.*",
-		"oimken/sharp": "dev-master",
-		"illuminate/html": "~5.0",
-		"doctrine/dbal": "~2.3",
-		"fzaninotto/faker": "1.3.*@dev"
-	},
-	"require-dev": {
-		"phpunit/phpunit": "~4.0",
-		"phpspec/phpspec": "~2.1"
-	},
-	"autoload": {
-		"classmap": [
-			"database"
-		],
-		"psr-4": {
-			"App\\": "app/"
-		}
-	},
-	"autoload-dev": {
-		"classmap": [
-			"tests/TestCase.php"
-		]
-	},
-	"scripts": {
-		"post-install-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-create-project-cmd": [
-			"php -r \"copy('.env.example', '.env');\"",
-			"php artisan key:generate"
-		]
-	},
-	"config": {
-		"preferred-install": "dist"
-	},
+  "name": "oimken/sharpzoo",
+  "description": "Sharp test app. From Philippe Lonchampt <dvlpp/sharpzoo>, slightly modified ",
+  "authors": [
+    {
+      "name": "Philippe Lonchampt",
+      "email": "philippelonchampt@gmail.com"
+    }
+  ],
+  "keywords": ["sharp"],
+  "type": "project",
+  "require": {
+    "laravel/framework": "5.0.*",
+    "oimken/sharp": "dev-master",
+    "illuminate/html": "~5.0",
+    "doctrine/dbal": "~2.3",
+    "fzaninotto/faker": "1.3.*@dev"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "~4.0",
+    "phpspec/phpspec": "~2.1"
+  },
+  "autoload": {
+    "classmap": [
+      "database"
+    ],
+    "psr-4": {
+      "App\\": "app/"
+    }
+  },
+  "autoload-dev": {
+    "classmap": [
+      "tests/TestCase.php"
+    ]
+  },
+  "scripts": {
+    "post-install-cmd": [
+      "php artisan clear-compiled",
+      "php artisan optimize"
+    ],
+    "post-update-cmd": [
+      "php artisan clear-compiled",
+      "php artisan optimize"
+    ],
+    "post-create-project-cmd": [
+      "php -r \"copy('.env.example', '.env');\"",
+      "php artisan key:generate"
+    ]
+  },
+  "config": {
+    "preferred-install": "dist"
+  },
   "minimum-stability": "dev"
 }
