--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "oimken/sharp": "dev-master",
     "illuminate/html": "~5.0",
     "doctrine/dbal": "~2.3",
-    "fzaninotto/faker": "1.3.*@dev"
+    "fzaninotto/faker": "1.3.*@dev",
+    "mcamara/laravel-localization": "1.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
