--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "illuminate/html": "~5.0",
     "doctrine/dbal": "~2.3",
     "fzaninotto/faker": "1.3.*@dev",
-    "mcamara/laravel-localization": "1.0.*"
+    "mcamara/laravel-localization": "1.0.*",
+    "filp/whoops": "~1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.0",
